>Updates to settings UI >Randomly found the fix for the overlapping bug where the original position of the applets was unclickable due to the original non-click region being there.

--- a/src/applet_modules/components/EnhancedTable.css
+++ b/src/applet_modules/components/EnhancedTable.css
@@ -1,3 +1,4 @@
+/* Common Settings */
 .react-table * {
   font-size: 0.7vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,14 +8,38 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.react-table tr > * {
+/* toolbar */
+.react-table-toolbar > * {
     margin: 0px;
     padding: 0px;
     /* height: 10px; */
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
-.rtrtr {
+/* Table Rows */
+.react-table tr {
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Table Cells */
+.react-table tr > * {
+    margin: 0px;
+    padding: 0.2vw;
+}
+
+/* Extra Padding at Start */
+.react-table tr > *:first-child {
+    padding-left: 0.6vw;
+}
+
+/* Extra Padding at End */
+.react-table tr > *:last-child {
+    padding-right: 0.6vw;
+}
+
+/* Header Settings */
+.react-table-header {
   position:absolute;
   pointer-events: none;
   background-color:red;
@@ -24,34 +49,24 @@
   z-index:1;
 }
 
-.fred {
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-}
-
+/* Table Row Settings*/
 .react-table tr > * > * {
-    margin: 0px;
-    /* border: 1px solid green; */
+    margin-top: 0.2vw;
+    margin-bottom: 0.2vw;
+    text-align:center;
 }
 
+/* Input Box Settings */
 .react-table tr > * > input {
     width: 2vw;
-    /* border: 1px solid green; */
 }
 
 .Checkbox {
-    height: 5px;
-    margin: -50px;
-    padding: -50px;
-    border: 1px solid orange;
+    height: 1.4vw;
+    width: 1.4vw;
 }
 
-.prerp * {
-  color: red;
-  background-color: #e7e7e7;
-}
-
+/* Div container for images in Table */
 .table_image {
   padding: 0;
   margin: 0;
@@ -60,16 +75,49 @@
   justify-content: center;
 }
 
+/* Actual image settings */
 .table_image > * {
   padding: 0;
   margin: 0;
 }
 
+/* Table Cells */
+.react-table-footer {
+    margin: 0px;
+    padding: 0px;
+    height: 10px;
+}
+
+/* Table Cells */
+.react-table-footer tr > * > * {
+    margin: 0px;
+    padding: 0px;
+    height: 0px;
+    border: 1px solid blue;
+}
+
+.react-table-footer tr > * > * > * {
+    margin: 0px;
+    padding: 0px;
+    /* height: 10px; */
+    border: 1px solid red;
+}
+
+/* Table Cells */
+.react-table-footer tr > * > * > * > * {
+    margin: 0px;
+    padding: 0px;
+    /* height: 10px; */
+    border: 1px solid red;
+}
+
+/* Settings for on-hover rotation */
 .rot60 {
   border-radius: 1000px;
   transition: all 0.25s ease-in;
 }
 
+/* Settings for animation at end */
 .rot60:hover {
   transform: rotate(-60deg);
 }
